bas: reduce warnings, prepare for nio refactor.